<resources>
    <string name="app_name">AnunciosApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="criar_anuncio">Criar anúncio</string>
    <string name="configuracoes">Configurações</string>
    <string name="termos_de_uso">Termos de uso</string>
    <string name="meus_anuncios">Meus anúncios</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="perfis">Perfis</string>
</resources>