<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/search"
            android:title="@string/pesquisar"
            android:icon="@drawable/ic_search_white_24dp"
            android:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="collapseActionView|ifRoom" />
        <item
            android:id="@+id/action_criar_anuncio"
            android:title="@string/criar_anuncio" />
        <item
            android:id="@+id/action_meus_anuncios"
            android:title="@string/meus_anuncios" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/action_configuracoes"
            android:title="@string/configuracoes" />
        <item android:title="@string/termos_de_uso" />
    </group>
</menu>